#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([Iris], [1.0], [mitch])
AM_INIT_AUTOMAKE([Iris], [1.0], [mitch])
AC_CONFIG_SRCDIR([source/kernel/simulator.cc])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_UINT64_T

# Checks for library functions.
SET_DEBUG = "-D_DEBUG"
AC_SUBST(SET_DEBUG)

AC_OUTPUT([Makefile])
